# governance-benchmark-dataset

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-CODE  LICENSE-DATASET  Makefile  README.md  SECURITY.md  _typos.toml  pyproject.toml  vulture_whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
dataset/architectures/agentic_ai/: metadata.json
dataset/architectures/agentic_ai/scenarios/: aa-001-fraud-investigation.json  aa-002-claims-triage.json
dataset/architectures/deterministic_rules/: metadata.json
dataset/architectures/deterministic_rules/scenarios/: dr-001-policy-engine.json  dr-002-sanctions-check.json
dataset/architectures/hybrid_ml_rules/: metadata.json
dataset/architectures/hybrid_ml_rules/scenarios/: hm-001-fraud-scoring.json  hm-002-credit-decisioning.json
dataset/architectures/streaming_features/: metadata.json
dataset/architectures/streaming_features/scenarios/: sf-001-realtime-risk.json  sf-002-session-risk.json
dataset/cascade_traces/agentic_ai/: aa-001-cascade.json
dataset/cascade_traces/hybrid_ml_rules/: hm-001-cascade.json
dataset/feasibility_matrices/: cross_architecture.parquet
dataset/schemas/: cascade_trace.schema.json  feasibility_matrix.schema.json  scenario.schema.json
docs/: architecture-types.md  cascade-analysis.md  feasibility-matrix.md  scoring-rubric.md
examples/: cross_architecture_comparison.py  load_and_score.py
src/benchmark/: __init__.py  types.py
src/benchmark/comparison/: __init__.py  cross_architecture.py  tables.py
src/benchmark/loaders/: __init__.py  parquet.py  scenario.py
src/benchmark/scoring/: __init__.py  cascade.py  feasibility.py  rubric.py
tests/: conftest.py  test_types.py
tests/fixtures/: factories.py
tests/fixtures/sample_data/: aa-001-fraud-investigation.json
tests/test_comparison/: test_cross_architecture.py  test_tables.py
tests/test_loaders/: test_parquet.py  test_scenario.py
tests/test_scoring/: test_cascade.py  test_feasibility.py  test_properties.py  test_rubric.py
